update swagger for delete user
